src/style.css
*
{
    margin: 0;
    padding: 0;
    -webkit-user-select: none;
}

html,
body
{
    overflow: hidden;
}

.webgl
{
    position: fixed;
    top: 0;
    left: 0;
    outline: none;
}

a {
    color: white;
}

#title {
    position: absolute;
    top: 5%;
    right: 5%;
    text-align: right;
    color: gray;
    box-shadow: black;
    transform: scale(1,1);
    transition: transform 0.3s;
}

#title.hide {
    transform: scale(0,0);
}

.point {
    position: absolute;
    top: 50%;
    left: 50%;
    cursor: pointer;
}

.point .label {
    position: absolute;
    width: 100px;
    height: 25px;
    top: -12px;
    left: -25px;
    border-radius: 10px;
    background: #00ffff;
    color: white;
    font-family: Arial, Helvetica, sans-serif;
    text-align: center;
    line-height: 25px;
    font-weight: 400;
    font-size: large;
    transform: scale(0,0);
    transition: transform 0.3s;
    opacity: 0.6;
    transition: opacity 0.3s;
}

.point.visible .label {
    transform: scale(1,1);
}

.point:hover .label{
    opacity: 0.9;
}

.point .text {
    display: none;
}

.appear {
    position: absolute;
    background-color: #00ffff;
    color: white;
    opacity: 0.75;
    transform: opacity 0.3s;
    padding: 1%;
    border-radius: 20%;

    transform: scale(0,0);
    transition: transform 0.3s;
}

.appear.visible {
    transform: scale(1,1);
}

#backButton:hover {
    opacity: 0.9;
}

#backButton {
    left: 2%;
    top: 2%;
    cursor: pointer;
}

#content {
    left: 2%;
    right: 2%;
    bottom: 2%;
    height: fit-content;
    max-height: 40%;
    overflow: scroll;
    opacity: 0.9;
    border-radius: 10px;
    background-color: black;
    padding-left: 2%;
}

*::-webkit-scrollbar {
    padding: 4%;
}

*::-webkit-scrollbar-corner {
    background-color: transparent;
}

*::-webkit-scrollbar-thumb {
    background-color: #ffffffee;
    border-radius: 3px;
}

.loading-bar {
    position: absolute;
    top: 50%;
    width: 100%;
    height: 2px;
    background: #ffffff;
    transform: scaleX(0.3);
    transition: transform 0.5s;
    opacity: 1;
    transition: opacity 2s;
}

.loading-bar.finished {
    opacity: 0;
}

